--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": "^7.3",
-        "emuravjev/mdash": "^0.2.1",
+        "qortex/mdash": "^0.3.0",
         "pug-php/pug": "^3.4"
     },
     "require-dev": {
